# Horizon_Mini

ROSArduinoBridge/: ROSArduinoBridge.ino  diff_controller.h  encoder_driver.h  encoder_driver.ino  motor_driver.h  motor_driver.ino
mini_bringup/: CMakeLists.txt  package.xml
mini_bringup/config/: mapper_params_online_async.yaml  mini_controllers.yaml  nav2_params.yaml
mini_bringup/launch/: mini_sim.launch.py  real_nav.launch.py  real_robot.launch.py
mini_bringup/worlds/: basic.sdf
mini_description/: CMakeLists.txt  package.xml
mini_description/launch/: display.launch.py
mini_description/meshes/: Bottom.stl  Chassis.stl  Document from Chibueze(1).stl  Document from Chibueze(6).stl  Left_motor.stl  Middle.stl  Right_motor.stl  Top.stl  base.stl  shifted_base.stl  stud.stl  wheel.stl
mini_description/rviz/: display.rviz
mini_description/urdf/: mini_common_materials.xacro
mini_description/urdf/body/: mini_chassis.urdf.xacro  mini_robot.urdf.xacro  mini_wheels.urdf.xacro
mini_description/urdf/gazebo/: mini_gazebo.urdf.xacro
mini_description/urdf/ros2_control/: mini_ros2_control.xacro
mini_description/urdf/sensors/: mini_lidar.urdf.xacro
mini_hardware/: CMakeLists.txt  mini_hardware.xml  package.xml
mini_hardware/include/mini_hardware/: arduino_comms.hpp  diffbot_system.hpp  wheel.hpp
mini_hardware/src/: diffbot_system.cpp
mini_perception/: package.xml  setup.cfg  setup.py
mini_perception/mini_perception/: yolo_detector.py
